--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,6 +59,11 @@
 #footer {
     position: fixed;
     bottom: 0;
+    left: 0;
+    width: 100%;
+    color: rgb(102, 102, 102);
+    background-color: rgb(242, 242, 242);
+    
 }
 #footer-bottom-left, #footer-bottom-right {
 	display: inline-flex;
@@ -73,4 +78,9 @@
 {
 	padding-left: 15px;
 	padding-right: 15px;
+}
+#footer-top, #footer-bottom {
+	border-top-color: rgb(228, 228, 228);
+	border-top-style: solid;
+	border-top-width: 1px;
 }
